syntax = "proto3";

package payment.v1;

option go_package = "payment/v1;paymentv1";

service WechatPaymentService {
  rpc NativePrePay(PrePayRequest) returns (NativePrePayResponse);
  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse);
}

message GetPaymentRequest {
  string biz_trade_no = 1;
}

message GetPaymentResponse {
  PaymentStatus status = 1;
}

message PrePayRequest {
  Amount amount = 1;
  string biz_trade_no = 2;
  string description = 3;
}

message Amount {
  int64 total = 1;
  string currency = 2;
}

enum PaymentStatus {
  PaymentStatusUnknown = 0;
  PaymentStatusInit = 1;
  PaymentStatusSuccess = 2;
  PaymentStatusFailed = 3;
  PaymentStatusRefund = 4;
}

// NativePrePayResponse 的 response 因为支付方式不同，
// 所以响应的含义也会有不同。
message NativePrePayResponse {
  string code_url = 1;
}
